--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "react": "^15.5.4"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.6.2",
-    "jest": "^24.9.0",
-    "webpack": "^2.6.1"
+    "jest": "^27.4.7",
+    "webpack": "^5.65.0"
   },
   "scripts": {
     "test": "jest",
@@ -20,19 +19,21 @@
     "name": "Mateusz Karłowski"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
-    "css-loader": "^3.2.0",
-    "react": "^15.6.2",
-    "react-dom": "^16.9.0",
-    "react-test-renderer": "^16.9.0",
-    "style-loader": "^1.0.0"
+    "css-loader": "^6.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^4.9.1"
   },
   "license": "GNU General Public License v3.0"
 }
