--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "jest": "^27.4.7",
     "webpack": "^5.65.0"
   },
@@ -27,7 +28,6 @@
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.3",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
     "css-loader": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
