--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "jest": "^27.4.7",
     "webpack": "^5.65.0"
   },
   "scripts": {
     "test": "jest",
     "start": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "build-dev": "webpack --mode=development"
   },
   "author": {
     "name": "Mateusz Karłowski"
